force-app/main/default/objects/copado__User_Story_Metadata__c/fields/copado__Action__c.field-meta.xml
<CustomField>
    <fullName>copado__Action__c</fullName>
    <description>Action to be performed with the current metadata when committing</description>
    <inlineHelpText>Action to be performed with the current metadata when committing</inlineHelpText>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>