force-app/main/default/objects/copado__User_Story_Metadata__c/fields/copado__Category__c.field-meta.xml
<CustomField>
    <fullName>copado__Category__c</fullName>
    <description>Represents a grouping of metadata, i.e. vlocity, cpq</description>
    <inlineHelpText>Represents a grouping of metadata, i.e. vlocity, cpq</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>