force-app/main/default/objects/copado__User_Story_Metadata__c/fields/copado__JsonInformation__c.field-meta.xml
<CustomField>
    <fullName>copado__JsonInformation__c</fullName>
    <description>Additional values associated with this commit</description>
    <inlineHelpText>Additional values associated with this commit</inlineHelpText>
    <label>Json Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>