force-app/main/default/objects/copado__User_Story_Metadata__c/fields/copado__Metadata_API_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Metadata_API_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>