force-app/main/default/objects/copado__User_Story_Metadata__c/fields/copado__Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>copado__Unique_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unique ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>